A11y: fix red button contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
   --color-primary: #0409e7;
   --color-primary-hover: #3c3ffa;
   --color-primary-active: #3c3ffa;
-  --color-button: #f00;
+  --color-button: #e00;
   --color-button-hover: #c00;
   --color-secondary: #ff8b9d;
   --color-secondary-dark: #203c90;
